--- a/css/styles.css
+++ b/css/styles.css
@@ -1,825 +1,60 @@
-body {
-    font-family: "Roboto", sans-serif;
-    color: #434455;
-    background-color: #ffffff;
-}
-
-.header {
-    border: 1px solid #E7E9FC;
-    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
-}
-
-.container {
-    width: 1158px;
-    padding: 0 15px;
-    margin: 0 auto;
-
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-    margin: 0;
-}
-
-ul,
-ol {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-a {
-    text-decoration: none;
-}
-
-img {
-    display: block;
-}
-
-.header-container {
-    display: flex;
-    align-items: center;
-}
-
-.logo {
-    font-family: "Raleway", sans-serif;
-    text-transform: uppercase;
-    font-size: 18px;
-    font-weight: 700;
-    text-decoration: none;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    color: #4d5ae5;
-}
-
-.header-logo {
-    padding: 24px 0;
-    margin-right: 76px;
-}
-
-.logo-name-two {
-    color: #2e2f42;
-}
-
-.navigation {
-    display: flex;
-    align-items: center;
-}
-
-.navigation-list {
-    display: flex;
-    align-items: center;
-    gap: 40px;
-}
-
-.navigation-name {
-    display: block;
-    text-decoration: none;
-    color: #2e2f42;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    padding: 24px 0;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-
-.navigation-name.current {
-    position: relative;
-}
-
-.navigation-name.current::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    width: 100%;
-    height: 4px;
-    background-color: #404bbf;
-    border-radius: 2px;
-}
-
-.navigation-name:hover,
-.navigation-name:focus,
-.navigation-name.current {
-    color: #404bbf;
-}
-
-.address {
-    font-style: normal;
-    color: #434455;
-    margin-left: auto;
-
-}
-
-.address-list {
-    display: flex;
-    align-items: center;
-    gap: 40px;
-}
-
-.address-contact {
-    display: block;
-    text-decoration: none;
-    color: #434455;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    font-size: 16px;
-    padding: 24px 0;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.address-contact:hover,
-.address-contact:focus {
-    color: #404bbf;
-}
-
-.section-main {
-    max-width: 1440px;
-    padding-top: 188px;
-    padding-bottom: 188px;
-    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
-    background-color: #2E2F42;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.section-container {
-    text-align: center;
-
-}
-
-.section-main-title {
-    font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
-    letter-spacing: 0.02em;
-    color: #ffffff;
-    text-align: center;
-    max-width: 496px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 48px;
-
-}
-
-.button,
-.submit-button {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: #ffffff;
-    background-color: #4d5ae5;
-    cursor: pointer;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 4px;
-    padding: 16px 32px;
-    border: none;
-    display: block;
-    min-width: 169px;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button:hover,
-.button:focus,
-.submit-button:hover,
-.submit-button:focus {
-    background-color: #404BBF;
-    color: #ffffff;
-}
-
-.section-properties {
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
-
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-}
-
-.properties-list {
-    display: flex;
-    gap: 24px;
-}
-
-.properties-item:nth-last-child(-n + 3) {
-    margin-bottom: 0;
-}
-
-.properties-item {
-    width: calc((100% - 72px) / 4);
-}
-
-.properties-icon {
-    width: 264px;
-    height: 112px;
-    border: 1px solid #8e8f99;
-    border-radius: 4px;
-    background: #f4f4fd;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 8px;
-}
-
-.properties-title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    margin-bottom: 8px;
-}
-
-.properties-text {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
-
-.section-specialists {
-    background: #f4f4fd;
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
-
-
-
-.specialists-title {
-    text-transform: capitalize;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    text-align: center;
-    margin-bottom: 72px;
-}
-
-.specialists-list {
-    display: flex;
-    gap: 24px;
-}
-
-.specialist-item {
-    background-color: #ffffff;
-    width: calc((100% - 72px) / 4);
-    border-bottom: 1 solid #434455;
-    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-    border-radius: 0 0 4px 4px;
-}
-
-.specialist-text {
-    text-align: center;
-    padding-top: 32px;
-    padding-bottom: 32px;
-}
 
-.specialist-name {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    margin-bottom: 8px;
-}
-
-.specialist-job {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-    margin-bottom: 8px;
-}
-
-.specialists-media {
-    display: flex;
-    justify-content: center;
-    gap: 24px;
-
-}
-
-.specialists-media-list {
-    width: 40px;
-    height: 40px;
-}
-
-.specialists-media-link {
-    width: 100%;
-    height: 100%;
-    background-color: #4d5ae5;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.specialists-media-link:hover,
-.specialists-media-link:focus {
-    background-color: #404bbf;
-}
-
-.specialists-media-icon {
-    fill: #f4f4fd;
-}
-
-.section-portfolio {
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
-
-.portfolio-title {
-    text-transform: capitalize;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    text-align: center;
-    margin-bottom: 72px;
-}
-
-.portfolio-list {
-    display: flex;
-    row-gap: 48px;
-    column-gap: 24px;
-    flex-wrap: wrap;
-}
-
-.portfolio-item {
-    background-color: #ffffff;
-    width: calc((100% - 48px) / 3);
-    transition: box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-    cursor: pointer;
-}
-
-.portfolio-item:hover {
-    box-shadow:
-        0 2px 1px 0 rgba(46, 47, 66, 0.08),
-        0 1px 1px 0 rgba(46, 47, 66, 0.16),
-        0 1px 6px 0 rgba(46, 47, 66, 0.08);
-}
-
-.overlay {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    padding: 40px 32px;
-    background-color: #4d5ae5;
-    color: #f4f4fd;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-item:hover .overlay {
-    transform: translateY(0);
-}
-
-.portfolio-item-wrapper {
-    position: relative;
-    max-width: 360px;
-    width: 100%;
-    overflow: hidden;
-}
-
-.portfolio-text {
-    border-bottom: 1px solid #e7e9fc;
-    border-left: 1px solid #e7e9fc;
-    border-right: 1px solid #e7e9fc;
-    padding: 32px 16px;
-}
-
-.portfolio-photo-name {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    margin-bottom: 8px;
-}
-
-.portfolio-photo-text {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
 
-.footer {
-    background: #2e2f42;
-    padding-top: 100px;
-    padding-bottom: 100px;
-}
-
-.footer-container {
-    display: flex;
-    align-items: baseline;
-}
 
-.footer-navigation {
-    margin-right: 120px;
-}
-
-.footer-media-text,
-.footer-subscribe-text {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #fff;
-    margin-bottom: 16px;
-}
 
-.footer-media-item {
-    display: flex;
-    gap: 16px;
-    width: 208px;
-}
 
-.footer-media-list {
-    width: 40px;
-    height: 40px;
-}
 
-.footer-media-link {
-    width: 100%;
-    height: 100%;
-    background-color: #4d5ae5;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.footer-media-link:hover,
-.footer-media-link:focus {
-    background-color: #31d0aa;
-}
 
-.footer-media-icon {
-    fill: #f4f4fd;
-}
 
-.footer-logo {
-    display: inline-block;
-    margin-bottom: 16px;
-}
 
-.footer-logo-name-two {
-    color: #f4f4fd;
-}
 
-.footer-text {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #ffffff;
-    width: 264px;
-    margin-bottom: 16px;
-}
 
 
-.form-footer {
-    display: flex;
-    gap: 24px;
-}
 
-.footer-subscribe {
-    margin-left: auto;
-}
 
-.subscribe-submit-icon {
-    fill: #ffffff;
-}
+@media (min-width: 320px) {
 
-.form-subscribe {
-    border: 1px solid #ffffff;
-    border-radius: 4px;
-    width: 264px;
-    height: 40px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    background-color: transparent;
-    font-size: 12px;
-    line-height: 2;
-    letter-spacing: 0.04em;
-    color: #ffffff;
-    padding: 8px 16px;
 
-}
 
-.form-footer input::placeholder {
-    color: #ffffff;
-}
 
-.button-footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    border-radius: 4px;
-    padding: 8px 24px;
-    min-width: 165px;
-    height: 40px;
-    background-color: #4d5ae5;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    text-align: center;
-    color: #ffffff;
-    border: none;
-    cursor: pointer;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.button-footer:hover,
-.button-footer:focus {
-    background-color: #31d0aa;
-    color: #ffffff;
-}
 
-.subscribe-submit-icon {
-    width: 24px;
-    height: 24px;
-    margin-left: 16px;
-}
 
-.modal-overlay {
-    background-color: rgba(46, 47, 66, 0.4);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal-overlay.is-open {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
 }
 
-.modal {
-    position: absolute;
-    background-color: #FCFCFC;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
-    padding: 72px 24px 24px 24px;
-    border-radius: 4px;
-    width: 408px;
-    min-height: 584px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-}
 
-.modal-overlay:not(.is-open) .modal {
-    transform: translate(-50%, -50%) scale (1.5);
-}
 
-.modal-close-button {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    background-color: #e7e9fc;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    width: 24px;
-    height: 24px;
-    top: 24px;
-    right: 24px;
-    padding: 0;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    cursor: pointer;
-}
 
-.modal-close-button:hover,
-.modal-close-button:focus {
-    background-color: #404bbf;
-    border: none;
-    color: #ffffff;
-}
 
-.modal-icon {
-    fill: #2e2f42;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+@media (min-width: 768px) {
 
-.modal-close-button:hover .modal-icon,
-.modal-close-button:focus .modal-icon {
-    fill: #ffffff;
-}
 
-.modal-title {
-    font-family: "Roboto", sans-serif;
-    text-align: center;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    margin-bottom: 16px;
-}
 
-input,
-textarea {
-    font-family: inherit;
-    line-height: inherit;
-}
 
-.form-element textarea::placeholder {
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: rgba(46, 47, 66, 0.4);
 
-}
 
-.form {
-    display: flex;
-    flex-direction: column;
-    max-width: 408px;
-    max-height: 584px;
-}
 
-.form-element {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 8px;
-}
 
-.form-element label,
-.form-element-comments label {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: #8e8f99;
-    line-height: 1.17;
-    margin-bottom: 4px;
-}
 
-.input-wrapper {
-    position: relative;
-}
 
-.form-element svg {
-    position: absolute;
-    top: 50%;
-    left: 12px;
-    transform: translateY(-50%);
-    cursor: pointer;
-    fill: #2e2f42;
-    left: 16px;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-element input {
-    border: none;
-    width: 360px;
-    height: 40px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    padding-left: 42px;
-    border-radius: 4px;
-    outline: none;
-    padding-left: 38px;
-    outline: transparent;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    background-color: transparent;
-}
 
-.form-element input:focus {
-    border: 1px solid #4d5ae5;
-}
 
-.form-element input:focus+svg {
-    fill: #4d5ae5;
-}
 
-.form-texarea::placeholder {
-    color :rgba(46, 47, 66, 0.4);
-}
 
-.form-element input:focus::placeholder {
-    color: #4d5ae5;
-}
+@media (min-width: 1158px) {
 
-.form-input {
-    border: none;
-    width: 360px;
-    height: 120px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    border-radius: 4px;
-    outline: none;
-    padding-left: 38px;
-}
 
-.form-texarea {
-    border: none;
-    width: 100%;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: rgba(46, 47, 66, 0.4);
-    height: 120px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    border-radius: 4px;
-    outline: none;
-    padding: 8px 16px;
-    background-color: transparent;
-    outline: transparent;
-    resize: none;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.form-element-comments textarea:focus {
-    border-color: #4D5AE5;
-}
 
-.form-element-comments {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 16px;
-}
 
-.signup-checkbox {
-    margin-bottom: 24px;
-}
 
-.signup {
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: #8e8f99;
-    align-items: center;
-    gap: 8px;
-}
 
-.signup .user-privacy {
-    width: 16px;
-    height: 16px;
-    border-radius: 2px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    margin-right: 8px;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    fill: transparent;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal-check:checked+.signup span {
-    background-color: #404BBF;
-    border: none;
-    fill: #F4F4FD;
-}
 
-.signup-privacy {
-    line-height: 1.33;
-    text-decoration: underline;
-    text-decoration-skip-ink: none;
-    color: #4d5ae5;
+    
 }
