--- a/css/styles.css
+++ b/css/styles.css
@@ -287,8 +287,8 @@ button {
     max-width: 216px;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 72px 52px;
     margin-bottom: 72px;
-
 }
 
 .button,
@@ -321,14 +321,371 @@ button {
 }
 
 
+                     /*Section 2*/
 
+.section-properties {
+    padding-top: 96px;
+    padding-bottom: 96px;
+}
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
 
+.properties-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 72px;
+}
 
+.properties-item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+}
 
+.properties-item {
+    width: 100%;
+}
 
+.properties-icon {
+    display: none;
+}
 
+.properties-title {
+    font-weight: 700;
+    font-size: 36px;
+    text-align: center;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+}
 
+.properties-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+                     /*Section 3*/
+
+.section-specialists {
+    background: #f4f4fd;
+    padding-top: 96px;
+    padding-bottom: 96px;
+    padding-left: 28px;
+    padding-right: 28px;
+}
+
+.specialists-title {
+    text-transform: capitalize;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-align: center;
+    margin-bottom: 72px;
+}
+
+.specialists-list {
+    display: flex;
+    row-gap: 72px;
+    column-gap: 16px;
+    flex-wrap: wrap;
+}
+
+.specialist-item {
+    background-color: #ffffff;
+    border-bottom: 1 solid #434455;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    border-radius: 0 0 4px 4px;
+    width: 264px;
+}
+
+.specialist-text {
+    text-align: center;
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
+
+.specialist-name {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+}
+
+.specialist-job {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+    margin-bottom: 8px;
+}
+
+.specialists-media {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+.specialists-media-list {
+    width: 40px;
+    height: 40px;
+}
+
+.specialists-media-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.specialists-media-link:hover,
+.specialists-media-link:focus {
+    background-color: #404bbf;
+}
+
+.specialists-media-icon {
+    fill: #f4f4fd;
+}
+
+                     /*Section 4*/
+
+.section-portfolio {
+    padding-top: 96px;
+    padding-bottom: 96px;
+}
+
+.portfolio-title {
+    text-transform: capitalize;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-align: center;
+    margin-bottom: 72px;
+}
+
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 48px;
+    column-gap: 16px;
+}
+
+.portfolio-item {
+    background-color: #ffffff;
+    width: 288;
+    transition: box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow:
+            0 2px 1px 0 rgba(46, 47, 66, 0.08),
+            0 1px 1px 0 rgba(46, 47, 66, 0.16),
+            0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-item-wrapper {
+    position: relative;
+    max-width: 360px;
+    width: 100%;
+    overflow: hidden;
+}
+
+.portfolio-text {
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+    padding: 32px 16px;
+}
+
+.overlay {
+    display: none;
+}
+
+.portfolio-photo-name {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+}
+
+.portfolio-photo-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+                       /*Footer*/
+
+.footer {
+    background: #2e2f42;
+    padding-top: 96px;
+    padding-bottom: 96px;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 72px;
+    width: 288px;
+}
+
+.footer-navigation {
+    margin-right: 16px;
+    margin-left: 16px;
+}
+
+.footer-logo {
+    display: flex;
+    margin-bottom: 16px;
+    padding-left: 86px;
+    padding-right: 86px;
+}
+
+.footer-logo-name-two {
+    color: #f4f4fd;
+}
+
+.footer-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    width: 264px;
+    text-align: center;
+}
+
+.footer-media-text,
+.footer-subscribe-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+    text-align: center;
+}
+
+.footer-media-item {
+    display: flex;
+    gap: 16px;
+    width: 208px;
+}
+
+.footer-media-list {
+    width: 40px;
+    height: 40px;
+}
+
+.footer-media-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-media-link:hover,
+.footer-media-link:focus {
+    background-color: #31d0aa;
+}
+
+.footer-media-icon {
+    fill: #f4f4fd;
+}
+
+.form-footer,
+.footer-subscribe {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+}
+
+.subscribe-submit-icon {
+    fill: #ffffff;
+}
+
+.form-subscribe {
+    border: 1px solid #ffffff;
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    padding: 8px 16px;
+
+}
+
+.form-footer input::placeholder {
+    color: #ffffff;
+}
+
+.button-footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    border-radius: 4px;
+    padding: 8px 24px;
+    min-width: 165px;
+    height: 40px;
+    background-color: #4d5ae5;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #ffffff;
+    border: none;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-footer:hover,
+.button-footer:focus {
+    background-color: #31d0aa;
+    color: #ffffff;
+}
+
+.subscribe-submit-icon {
+    width: 24px;
+    height: 24px;
+    margin-left: 16px;
+}
 
 
 
