--- a/css/styles.css
+++ b/css/styles.css
@@ -518,7 +518,37 @@ button {
 }
 
 .overlay {
-    display: none;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    color: #f4f4fd;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover .overlay {
+    transform: translateY(0);
+}
+
+.portfolio-item-wrapper {
+    position: relative;
+    max-width: 360px;
+    width: 100%;
+    overflow: hidden;
+}
+
+.portfolio-text {
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+    padding: 32px 16px;
 }
 
 .portfolio-photo-name {
@@ -956,10 +986,7 @@ textarea {
 }
 
 
-
-
-
-@media screen and (min-width: 768px) {
+            @media screen and (min-width: 768px) {
 
 .container {
     width: 768px;
@@ -1052,17 +1079,119 @@ textarea {
     color: #404bbf;
 }
 
+                 /*Section 1*/
 
+.section-main {
+    max-width: 768px;
+    padding-top: 112px;
+    padding-bottom: 112px;
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+          url(../images/people-office-2x.jpg);
+}
 
+.section-main-title {
+    max-width: 496px;
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    text-align: center;
+    margin-bottom: 48px;
+}
 
+.properties-list {
+    display: flex;
+    flex-direction: row;
+    gap: 72px 24px;
+}
 
+.properties-item {
+    width: calc((100% - 48px) / 2);
+}
+
+.properties-title {
+    text-align: start;
+}
+
+                  /*Section 2*/
+
+.section-specialists {
+    padding-left: 92px;
+    padding-right: 92px;
+}
+
+.specialists-container {
+    width: 552px;
+}
+
+.specialists-list { 
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+}
+
+.specialist-item {
+    width: calc((100% - 24px) / 2);
+}
+
+                  /*Section 3*/
+
+.portfolio-list {
+    column-gap: 24px;
+    row-gap: 72px;
+}
+
+.portfolio-item {
+    width: calc((100% - 24px) / 2);
+}
+
+                   /*FOOTER*/
+
+.footer-container {
+    display: flex;
+    justify-content: start;
+    padding-left: 108px;
+    padding-right: 108px;
+    row-gap: 72px;
+    column-gap: 24px;
+    align-items: baseline;
+    flex-wrap: wrap;
 
 }
 
+.footer-navigation {
+    margin-left: 0;
+}
 
+.footer-logo {
+    display: inline-block;
+    padding: 0;
+}
+.footer-media-text,
+.footer-subscribe-text {
+    text-align: start;
+}
 
+.footer-subscribe {
+    display: block;
+    flex-direction: column;
+}
 
+                     /*MODAL*/
 
+.modal {
+     padding: 72px 24px 24px 24px;
+     width: 408px;
+     min-height: 584px;
+ }
+
+.form-element input {
+     width: 360px;
+ }
+
+ 
+}
 
 
 @media screen and (min-width: 1158px) {
@@ -1073,7 +1202,7 @@ textarea {
     padding-right: 15px;
 }
 
- .header-logo {
+.header-logo {
     margin-right: 76px;
  }
 
@@ -1089,6 +1218,10 @@ textarea {
     font-size: 16px;
     padding: 24px 0;
 }
+
+
+
+
 
 
 
