--- a/css/styles.css
+++ b/css/styles.css
@@ -265,13 +265,24 @@ button {
     max-width: 320px;
     padding-top: 72px;
     padding-bottom: 72px;
-    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), 
+        url(../images/people-office-mob-opt-1х.jpg);
     background-color: #2E2F42;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     margin-left: auto;
     margin-right: auto;
+}
+
+@media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .section-main {
+     background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../images/people-office-mob-opt-2х.jpg);
+    }
 }
 
 .section-container {
@@ -1090,7 +1101,17 @@ textarea {
     padding-top: 112px;
     padding-bottom: 112px;
     background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-          url(../images/people-office-2x.jpg);
+          url(../images/people-office-tabl-opt-1x.jpg);
+}
+
+@media (min-device-pixel-ratio: 2),
+   (-webkit-min-device-pixel-ratio: 2),
+   (min-resolution: 192dpi),
+   (min-resolution: 2dppx) {
+    .section-main {
+        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../images/people-office-mob-opt-2х.jpg);
+    }
 }
 
 .section-main-title {
@@ -1238,7 +1259,20 @@ textarea {
     max-width: 1440px;
     padding-top: 188px;
     padding-bottom: 188px;
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+        url(../images/people-office-desk-opt-1х.jpg);
 }
+
+ @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+     .section-main {
+         background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+             url(../images/people-office-desk-opt-2х.jpg);
+     }
+ }
+
 
                   /*Section 2*/
 
